test/test-cases/negative/block_errors.pas

Program block_errors(input, output);

Var 
  x : integer;
  y : real;
Function fun(a: bean, 123: char): integer;
Begin
  fun := 0;
End;

Procedure emptyId();
Begin
End;

Begin
  emptyId(-);
  fun(x)
End.
